--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,7 +27,7 @@ set -g @catppuccin_window_status_style "rounded"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuc:in/tmux#v2.1.0'
+set -g @plugin 'catppucin/tmux#v2.1.0'
 
 set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_application} #{E:@catppuccin_status_session}"
