--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,38 +1,165 @@
+# Reload config
 unbind r
 bind r source-file ~/.tmux.conf
+#bind r source-file $HOME/.config/tmux/tmux.conf
 
-set -g default-terminal "screen-256color"
-set -ag terminal-overrides ",screen-256color*:Tc"
+# Enable 256 color support
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*:RGB"
 
+# Change prafix from Ctrl-b to Ctrl-s
+unbind C-b
 unbind C-b
 set -g prefix C-s
+bind-key C-s send-prefix
 
+# Enable mouse support
 set -g mouse on
+
+# Enable clipboard
+set -g set-clipboard on
+
 set -g base-index 1
 
 set-window-option -g mode-keys vi
 
-# vim-like pane switching
-bind-key -r h select-pane -L
-bind-key -r j select-pane -D
-bind-key -r k select-pane -U
-bind-key -r l select-pane -R
+# Vim-style pane navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-set-option -g status-position top
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+# Split windows (opens in same directory)
+unbind %
+bind | split-window -h -c "#{pane_current_path}"
 
-# set -g @catppuccin_flavor "mocha"
+unbind '"'
+bind - split-window -v -c "#{pane_current_path}"
+
+# Alt+hjkl to switch panes without prefix
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Alt+number to select window
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
+
+# Change from 0 based to 1 based because keyboard layout
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+# Vim-like copy/paste
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
+set -g @plugin 'catppuccin/tmux#v2.1.3' # See https://github.com/catppuccin/tmux/tags for additional tags
+# ...alongside
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @catppuccin_flavor 'macchiato' # latte, frappe, macchiato or mocha
 set -g @catppuccin_window_status_style "rounded"
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppucin/tmux#v2.1.0'
-
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
 set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application} #{E:@catppuccin_status_session}"
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# Load catppuccin
+run ~/.tmux/plugins/tmux/catppuccin.tmux
 
-set -g status-style bg=default
+##### Catppuccin Macchiato – full palette #####
+
+#rosewater="#f4dbd6"
+#flamingo="#f0c6c6"
+#pink="#f5bde6"
+#mauve="#c6a0f6"
+#red="#ed8796"
+#maroon="#ee99a0"
+#peach="#f5a97f"
+#yellow="#eed49f"
+#green="#a6da95"
+#teal="#8bd5ca"
+#sky="#91d7e3"
+#sapphire="#7dc4e4"
+#blue="#8aadf4"
+#lavender="#b7bdf8"
+#
+#text="#cad3f5"
+#subtext1="#b8c0e0"
+#subtext0="#a5adcb"
+#
+#overlay2="#939ab7"
+#overlay1="#8087a2"
+#overlay0="#6e738d"
+#
+#surface2="#5b6078"
+#surface1="#494d64"
+#surface0="#363a4f"
+#
+#base="#24273a"
+#mantle="#1e2030"
+#crust="#181926"
+#
+## Status bar
+#set -g status on
+#set -g status-bg "${base}"
+#set -g status-justify left
+#set -g status-left ""
+#set -g status-left-length 100
+#set -g status-right-length 100
+#
+## Messages
+#set -g message-style "fg=${sky},bg=${surface0},align=centre"
+#set -g message-command-style "fg=${sky},bg=${surface0},align=centre"
+#
+## Panes
+#set -g pane-border-style "fg=${surface0}"
+#set -g pane-active-border-style "fg=${blue}"
+#
+## Windows
+#set -g window-status-activity-style "fg=${text},bg=${base},none"
+#set -g window-status-separator ""
+#set -g window-status-style "fg=${text},bg=${base},none"
+#
+## Current window
+#set -g window-status-current-format \
+#"#[fg=${blue},bg=${base}] #I: \
+##[fg=${mauve},bg=${base}](✓) \
+##[fg=${sky},bg=${base}]#(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) \
+##[fg=${mauve},bg=${base}]"
+#
+## Other windows
+#set -g window-status-format \
+#"#[fg=${blue},bg=${base}] #I: #[fg=${text},bg=${base}]#W"
+#
+## Status right
+#set -g status-right \
+#"#[fg=${blue},bg=${base},nobold,nounderscore,noitalics]\
+##[fg=${base},bg=${blue},nobold,nounderscore,noitalics] \
+##[fg=${text},bg=${surface0}] #W \
+##{?client_prefix,#[fg=${mauve}],#[fg=${sky}]}\
+##[bg=${surface0}]#{?client_prefix,#[bg=${mauve}],#[bg=${sky}]}\
+##[fg=${base}] \
+##[fg=${text},bg=${surface0}] #S "
+#
+## Modes
+#set -g clock-mode-colour "${blue}"
+#set -g mode-style "fg=${blue} bg=${surface2} bold"
+
