Resolve starship RPROMPT freezing

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,4 +1,4 @@
-"$schema" = 'https://starship.rs/config-schema.json'
+
 
 format = """
 [](red)\
@@ -28,6 +28,8 @@ $cmd_duration\
 $line_break\
 $character"""
 
+right_format = ""
+
 palette = 'catppuccin_macchiato'
 
 [os]
@@ -54,6 +56,9 @@ CentOS = ""
 Debian = "󰣚"
 Redhat = "󱄛"
 RedHatEnterprise = "󱄛"
+
+[fill]
+disabled = true
 
 [username]
 show_always = true
@@ -158,10 +163,10 @@ vimcmd_replace_symbol = '[❮](bold fg:lavender)'
 vimcmd_visual_symbol = '[❮](bold fg:yellow)'
 
 [cmd_duration]
+disabled = true
 show_milliseconds = true
 format = " in $duration "
 style = "bg:lavender"
-disabled = false
 show_notifications = true
 min_time_to_notify = 45000
 
